# marmoset

./: CMakeLists.txt  HELLO_WORLD.md  INSTALL.md  README.md  debug.c  die_with_error.c  http_request.c  http_request.h  http_request_parser.h  main.c  makefile  request.c  request.h  request_handler.c  response_handler.c  response_handler.h  string_utilities.c  string_utilities.h
MAKE/: CMakeCache.txt  Makefile  cmake_install.cmake
app/: app.c  app.h
app/commander/: commander.c  commander.h
app/hardware/: hardware.c  hardware.h
app/index/: index.c  index.h
controller/: routes.c  routes.h
controller/commander/: commander.c  commander.h
controller/index/: index.c  index.h
core/: main.c
core/debug/: debug.c
core/error/: abort.c  abort.h
core/session/: http_method.c  http_method.h  http_request.h  http_response.h  http_serialize.c  mime_type.c  mime_type.h  request_handler.h  response_handler.c  response_handler.h  response_status.c  response_status.h  serializer.c  serializer.h
core/session/request/: http_request.h  http_request_parser.c  http_request_parser.h  request_handler.c  request_handler.h
core/session/response/: http_response.h  response_handler.c  response_handler.h  serializer.c  serializer.h
marmoset/: abort.c  abort.h  app_m.c  app_m.h  debug.c  debug.h  die_with_error.c  die_with_error.h  http_method.c  http_method.h  http_protocol.h  http_request.h  http_response.h  marmoset.c  marmoset.h  mime_type.c  mime_type.h  respond.c  respond.h  response_status.c  response_status.h  serializer.c  serializer.h
marmoset/debug/: debug.h
marmoset/error/: abort.c  abort.h  die_with_error.h
marmoset/session/: app_m.c  app_m.h  http_method.h  http_protocol.h  http_request.h  respond.c  respond.h  response_status.h  serializer.c  serializer.h
view/: commander_form.html  index.html
